# OptionPricer

./: .gitignore  README.md  pyproject.toml
core/config/: config.ini  configFile.py
core/pricer/base/: BasePricer.py
core/pricer/custom/: BinomialTree.py  BlackScholesMerton.py  Pricer.py
core/utilities/: functions.py
ui/: main.py
ui/.streamlit/: config.toml
ui/pages/home/: home.py
ui/pages/price/: ImpliedVol.py  pricer.py
ui/plotter/base/: BasePlotter.py
ui/plotter/custom/: BinomialTree.py  BlackScholesMerton.py  Plotter.py
ui/utils/: custom_widgets.py
