[project]
name = "OptionPricer"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "scipy (>=1.16.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
